force-app/main/default/objects/redwing__Achievement__c/fields/redwing__About__c.field-meta.xml
<CustomField>
    <fullName>redwing__About__c</fullName>
    <inlineHelpText>Information displayed in the About section of an Achievement.</inlineHelpText>
    <label>About</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>