force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Background_Color__c.field-meta.xml
<CustomField>
    <fullName>redwing__Background_Color__c</fullName>
    <inlineHelpText>HEX Color code for the achievement header background color (e.g. #dcdcdc).</inlineHelpText>
    <label>Background Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>