force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Background_Image_URL_For_Header__c.field-meta.xml
<CustomField>
    <fullName>redwing__Background_Image_URL_For_Header__c</fullName>
    <inlineHelpText>URL for the image displayed in the achievement header.</inlineHelpText>
    <label>Background Image URL For Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>