force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Description__c.field-meta.xml
<CustomField>
    <fullName>redwing__Description__c</fullName>
    <inlineHelpText>This field is used to provide additional description for the users.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>