force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Eligible_Image__c.field-meta.xml
<CustomField>
    <fullName>redwing__Eligible_Image__c</fullName>
    <label>Eligible Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>