force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Enable_Printing__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Printing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If enabled, users will have the ability to print this achievement.</inlineHelpText>
    <label>Enable Printing</label>
    <type>Checkbox</type>
</CustomField>