force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Enable_Register_Again__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Register_Again__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, the Register Again button will be displayed on the Achievement Header when user has not yet renewed an achievement.</inlineHelpText>
    <label>Enable Register Again</label>
    <type>Checkbox</type>
</CustomField>