force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Expiration_Date__c</fullName>
    <inlineHelpText>All achievement assignments will be expired on this date.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>