force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Expiration_Term__c.field-meta.xml
<CustomField>
    <fullName>redwing__Expiration_Term__c</fullName>
    <inlineHelpText>Expiration Term which will be used as default when creating new Acquisition Rules.</inlineHelpText>
    <label>Expiration Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>