force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Expiration_Term_Basis__c.field-meta.xml
<CustomField>
    <fullName>redwing__Expiration_Term_Basis__c</fullName>
    <inlineHelpText>Expiration Term Basis which will be used as default when creating new Acquisition Rules.</inlineHelpText>
    <label>Expiration Term Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>