force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Override_Completed_Status__c.field-meta.xml
<CustomField>
    <fullName>redwing__Override_Completed_Status__c</fullName>
    <inlineHelpText>Overriding the completed status will make the Achievement Assignments go to the defined &quot;override status&quot; instead of &quot;Acquired&quot;. It&apos;s up to you move to the &quot;Acquired&quot;  status once this feature is used.</inlineHelpText>
    <label>Override Completed Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>