force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Renewal_Option__c.field-meta.xml
<CustomField>
    <fullName>redwing__Renewal_Option__c</fullName>
    <inlineHelpText>This field is used to specify when users can renew their achievement. If it is not selected, users will be able to renew achievements any day after the expiration date.</inlineHelpText>
    <label>Renewal Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal before expiration</fullName>
            </value>
            <value>
                <fullName>Renewal after expiration</fullName>
            </value>
            <value>
                <fullName>Renewal before or after expiration</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
                <isActive>false</isActive>
                <label>--None--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>