force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Renewal_Term_After_Expiration__c.field-meta.xml
<CustomField>
    <fullName>redwing__Renewal_Term_After_Expiration__c</fullName>
    <inlineHelpText>Number of days/weeks/months/years for renewal window after expiration date.</inlineHelpText>
    <label>Renewal Term (After Expiration)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>