force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Renewal_Term_Basis_After_Expiration__c.field-meta.xml
<CustomField>
    <fullName>redwing__Renewal_Term_Basis_After_Expiration__c</fullName>
    <inlineHelpText>Term basis (days/weeks/months/years) for renewal window after expiration date.</inlineHelpText>
    <label>Renewal Term Basis (After Expiration)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
                <isActive>false</isActive>
                <label>--None--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>