force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Show_If_Expired__c.field-meta.xml
<CustomField>
    <fullName>redwing__Show_If_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this option to show Achievement in Profile even when it&apos;s expired</inlineHelpText>
    <label>Show If Expired</label>
    <type>Checkbox</type>
</CustomField>