force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Achievements</fullName>
                <default>true</default>
                <label>Achievements</label>
            </value>
            <value>
                <fullName>Certifications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>