force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Work_Badge_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__Work_Badge_Id__c</fullName>
    <label>Work.com Badge Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>