force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Work_Badge_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__Work_Badge_Image_URL__c</fullName>
    <label>Work.com Badge Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>