force-app/main/default/objects/redwing__Achievement__c/fields/redwing__Work_Badge_Message__c.field-meta.xml
<CustomField>
    <fullName>redwing__Work_Badge_Message__c</fullName>
    <label>Work.com Badge Message</label>
    <type>TextArea</type>
</CustomField>