force-app/main/default/objects/redwing__Achievement__c/listViews/redwing__All.listView-meta.xml
<ListView>
    <fullName>redwing__All</fullName>
    <columns>NAME</columns>
    <columns>redwing__Achievement_Category__c</columns>
    <columns>redwing__Type__c</columns>
    <columns>redwing__Expiration_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>